--- a/res/values/strings_ko_KR.arb
+++ b/res/values/strings_ko_KR.arb
@@ -1,1 +1,74 @@
-{}
+{
+  "app_name": "Questrip",
+
+  "intro_on_failure_canceled": "로그인하셔야 앱을 사용하실 수 있습니다.",
+
+  "sign_up_field_welcome": "환영합니다!",
+  "sign_up_field_nickname": "닉네임",
+  "sign_up_field_year": "년",
+  "sign_up_field_month": "월",
+  "sign_up_field_day": "일",
+  "sign_up_field_address": "주소",
+  "sign_up_field_address_detail": "상세주소",
+  "sign_up_alert_nickname": "닉네임을 확인해주세요.",
+  "sign_up_alert_birthday": "생년월일을 확인해주세요.",
+  "sign_up_alert_address": "주소를 확인해주세요.",
+
+  "terms_field_terms": "신체 포기 각서\n본인은 Questrip 운영자에게 신체의 모든 지위를 박탈당하는 데에 동의합니다.",
+  "terms_button_agree": "상기 약관에 동의합니다.",
+  "terms_alert_rejected": "죄송합니다. 내부 사정으로 인하여 일시적으로 회원가입을 진행할 수 없습니다.",
+  "terms_alert_welcome": "축하드립니다! 이제 Questrip 의 모든 기능을 이용하실 수 있습니다.",
+
+  "quest_map_field_period": "${year}년 ${month}월 ${day}일까지",
+
+  "view_field_title": "리더보드",
+  "view_field_report": "신고하기",
+  "view_button_submit": "도전",
+  "view_alert_submitted": "제출되었습니다!",
+  "view_alert_reported": "신고가 접수되었습니다",
+  "view_alert_report_duplicate": "이미 신고하였습니다",
+  "view_alert_vote": "\"${user}\"님의 작품에 추천하시겠습니까?",
+  "view_alert_vote_duplicate": "이미 추천하였습니다",
+  "view_alert_voted": "추천하였습니다",
+
+  "leader_board_likes": "Likes",
+  "leader_board_rating": "추천순",
+  "leader_board_date": "최신순",
+
+  "about_field_title": "내가 도전한 퀘스트",
+
+  "config_field_title": "환경설정",
+  "config_alert_logout": "로그아웃 하시겠습니까?",
+  "config_alert_sign_off": "정말 Questrip 을 회원탈퇴 하시겠습니까? 탈퇴한 계정은 복구하실 수 없습니다.",
+  "config_alert_sign_off_success": "그동안 Questrip 을 사랑해주셔서 감사했습니다. \n 다시 돌아오시기를 기다리겠습니다.",
+  "config_button_logout": "로그아웃",
+  "config_button_sign_off": "회원탈퇴",
+  "config_button_open_source": "오픈소스 약관",
+
+  "open_source_terms": "오픈소스 약관\n 앱에 사용된 여러 오픈소스들 (Google Maps 등..)의 라이선스를 명시하는 부분입니다.",
+
+  "shop_field_title": "상점",
+  "shop_unit_money": "원",
+
+  "permission_format": "Questrip 을 사용하기 위해선 %s에 접근하기 위한 권한이 필요합니다. 권한 승인에 동의하십니까?",
+  "permission_denied": "죄송합니다. Questrip 을 사용하기 위해선 권한이 필요합니다.",
+  "permission_camera": "사진 촬영",
+  "permission_location": "위치 정보",
+  "permission_internet": "인터넷",
+
+  "common_alert_title": "알림",
+  "common_alert_confirm": "확인",
+  "common_alert_cancel": "취소",
+  "common_alert_canceled": "취소하였습니다.",
+  "common_alert_choose_yes": "예",
+  "common_alert_choose_no": "아니오",
+  "common_alert_button_next": "다음",
+  "common_alert_button_prev": "이전",
+  "common_alert_button_submit": "제출하기",
+  "common_alert_field_close_app": "Questrip 을 종료하시겠습니까?",
+  "common_failure_unknown": "알 수 없는 오류",
+  "common_failure_internal": "죄송합니다. 잠시 후 다시 시도해주세요.",
+  "common_failure_network": "네트워크 연결을 확인하여 다시 시도해주세요.",
+
+  "debug_todo": "구현 예정입니다."
+}
