--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -20,6 +20,24 @@
   "terms_alert_rejected": "Sorry. Due to internal circumstances, sign-up can not be temporarily done.",
   "terms_alert_welcome": "Congratulations! All Questrip features are now available.",
 
+  "quest_map_field_period": "${month} ${day}, ${year}",
+
+  "view_field_title": "LeaderBoard",
+  "view_field_report": "Report",
+  "view_button_submit": "Submit",
+  "view_alert_submitted": "Submitted!",
+  "view_alert_reported": "Report has been received",
+  "view_alert_report_duplicate": "Already reported",
+  "view_alert_vote": "Would you recommend it to \"${user}\"?",
+  "view_alert_vote_duplicate": "Already recommended",
+  "view_alert_voted": "Recommended",
+
+  "leader_board_likes": "Likes",
+  "leader_board_rating": "Rating",
+  "leader_board_date": "Latest",
+
+  "about_field_title": "My quests",
+
   "config_field_title": "Config",
   "config_alert_logout": "Are you sure you want to logout?",
   "config_alert_sign_off": "Are you sure you want to unsubscribe Questrip? You cannot recover an unsubscribed account.",
@@ -29,6 +47,9 @@
   "config_button_open_source": "Open Source Terms",
 
   "open_source_terms": "Open Source Terms\n TODO",
+
+  "shop_field_title": "Shop",
+  "shop_unit_money": "won",
 
   "permission_denied": "Sorry, but you must accept permissions for using Questrip.",
   "permission_camera": "Camera",
