--- a/res/values/strings_ko_KR.arb
+++ b/res/values/strings_ko_KR.arb
@@ -21,6 +21,7 @@
   "terms_alert_welcome": "축하드립니다! 이제 Questrip 의 모든 기능을 이용하실 수 있습니다.",
 
   "quest_map_field_period": "${year}년 ${month}월 ${day}일까지",
+  "quest_map_button_menu": "메뉴",
 
   "view_field_title": "리더보드",
   "view_field_report": "신고하기",
