--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -60,6 +60,15 @@
   "shop_field_title": "Shop",
   "shop_unit_money": "won",
 
+  "shop_payment_field_agree": "I have confirmed the order above and agree to the payment.",
+  "shop_payment_field_loading": "Payment is in progress...\nPlease wait a moment...",
+  "shop_payment_field_ordered": "Payment has been made!\nThank you for using!",
+  "shop_payment_field_title": "Order/Payment",
+  "shop_payment_field_title_address": "Select destination",
+  "shop_payment_field_title_pay_method": "Select payment method",
+  "shop_payment_field_total_price": "Total price",
+  "shop_payment_button_order": "Order",
+
   "permission_denied": "Sorry, but you must accept permissions for using Questrip.",
   "permission_camera": "Camera",
   "permission_location": "Location",
