--- a/res/values/strings_ko_KR.arb
+++ b/res/values/strings_ko_KR.arb
@@ -60,6 +60,7 @@
   "shop_field_title": "상점",
   "shop_unit_money": "원",
 
+  "shop_about_field_max_value": "최대 ${max}개까지 구매할 수 있습니다.",
   "shop_payment_field_agree": "위 주문 내용을 확인하였으며, 결제에 동의합니다.",
   "shop_payment_field_loading": "결제 진행중입니다...\n잠시만 기다려주세요...",
   "shop_payment_field_ordered": "결제 되었습니다!\n이용해 주셔서 감사합니다!",
@@ -75,6 +76,7 @@
   "permission_internet": "인터넷",
 
   "common_alert_title": "알림",
+  "common_alert_select": "선택",
   "common_alert_confirm": "확인",
   "common_alert_cancel": "취소",
   "common_alert_canceled": "취소하였습니다.",
