--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -61,6 +61,10 @@
   "shop_unit_money": "won",
 
   "shop_about_field_max_value": "You can purchase up to ${max}.",
+  "shop_about_seller_field_title": "Seller Information",
+  "shop_about_seller_field_name_shop": "Name",
+  "shop_about_seller_field_name_seller": "Seller",
+  "shop_about_seller_field_contact": "Contact",
   "shop_payment_field_agree": "I have confirmed the order above and agree to the payment.",
   "shop_payment_field_loading": "Payment is in progress...\nPlease wait a moment...",
   "shop_payment_field_ordered": "Payment has been made!\nThank you for using!",
